# spammer

./: .gitignore  .replit  Cargo.toml  README.md  Settings.toml  msg.txt  players2.txt
src/: lib.rs  main.rs
